[project]
name = "marl-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=2.4.6",
    "pettingzoo>=1.26.1",
    "pygame>=2.5",
    "torch>=2.0",
    "tensorboard>=2.14",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
